@@ -1,5 +1,5 @@
 #
-# $Id: entry.tcl,v 1.4.2.1 2010/08/26 02:06:10 hobbs Exp $
+# $Id: entry.tcl,v 1.4.2.2 2010/09/01 16:40:15 jenglish Exp $
 #
 # DERIVED FROM: tk/library/entry.tcl r1.22
 #
@@ -44,7 +44,7 @@ option add *TEntry.cursor [ttk::cursor text]
 #
 # <Control-Key-space>, <Control-Shift-Key-space>,
 # <Key-Select>,  <Shift-Key-Select>:
-#	Ttk entry widget doesn't use selection anchor.
+#	ttk::entry widget doesn't use selection anchor.
 # <Key-Insert>:
 #	Inserts PRIMARY selection (on non-Windows platforms).
 #	This is inconsistent with typical platform bindings.
@@ -95,19 +95,19 @@ bind TEntry <<PasteSelection>>		{ ttk::entry::ScanRelease %W %x }
 
 ## Keyboard navigation bindings:
 #
-bind TEntry <<PrevChar>>		{ ttk::entry::Move %W prevchar }
-bind TEntry <<NextChar>> 		{ ttk::entry::Move %W nextchar }
-bind TEntry <<PrevWord>>		{ ttk::entry::Move %W prevword }
-bind TEntry <<NextWord>>		{ ttk::entry::Move %W nextword }
-bind TEntry <<LineStart>>		{ ttk::entry::Move %W home }
-bind TEntry <<LineEnd>>			{ ttk::entry::Move %W end }
+bind TEntry <Key-Left> 			{ ttk::entry::Move %W prevchar }
+bind TEntry <Key-Right> 		{ ttk::entry::Move %W nextchar }
+bind TEntry <Control-Key-Left>		{ ttk::entry::Move %W prevword }
+bind TEntry <Control-Key-Right>		{ ttk::entry::Move %W nextword }
+bind TEntry <Key-Home>			{ ttk::entry::Move %W home }
+bind TEntry <Key-End>			{ ttk::entry::Move %W end }
 
-bind TEntry <<SelectPrevChar>> 		{ ttk::entry::Extend %W prevchar }
-bind TEntry <<SelectNextChar>>		{ ttk::entry::Extend %W nextchar }
-bind TEntry <<SelectPrevWord>>		{ ttk::entry::Extend %W prevword }
-bind TEntry <<SelectNextWord>>		{ ttk::entry::Extend %W nextword }
-bind TEntry <<SelectLineStart>>		{ ttk::entry::Extend %W home }
-bind TEntry <<SelectLineEnd>>		{ ttk::entry::Extend %W end }
+bind TEntry <Shift-Key-Left> 		{ ttk::entry::Extend %W prevchar }
+bind TEntry <Shift-Key-Right>		{ ttk::entry::Extend %W nextchar }
+bind TEntry <Shift-Control-Key-Left>	{ ttk::entry::Extend %W prevword }
+bind TEntry <Shift-Control-Key-Right>	{ ttk::entry::Extend %W nextword }
+bind TEntry <Shift-Key-Home>		{ ttk::entry::Extend %W home }
+bind TEntry <Shift-Key-End>		{ ttk::entry::Extend %W end }
 
 bind TEntry <Control-Key-slash> 	{ %W selection range 0 end }
 bind TEntry <Control-Key-backslash> 	{ %W selection clear }
